# Bedrock

./: .__clang-format  .clang-format  .clangd.example  .gitignore  .gitmodules  .travis.yml  .uncrustify.cfg  BedrockBlockingCommandQueue.cpp  BedrockBlockingCommandQueue.h  BedrockCommand.cpp  BedrockCommand.h  BedrockCommandQueue.cpp  BedrockCommandQueue.h  BedrockConflictManager.cpp  BedrockConflictManager.h  BedrockConflictMetrics.cpp  BedrockConflictMetrics.h  BedrockCore.cpp  BedrockCore.h  BedrockMetric.h  BedrockMetricPlugin.cpp  BedrockMetricPlugin.h  BedrockMetrics.cpp  BedrockMetrics.h  BedrockNode.cpp  BedrockNode.h  BedrockPlugin.cpp  BedrockPlugin.h  BedrockServer.cpp  BedrockServer.h  BedrockServer_MessageQueue.cpp  BedrockTest.cpp  BedrockTest.h  BedrockTimeoutCommandQueue.cpp  BedrockTimeoutCommandQueue.h  BedrockWaitCounter.cpp  BedrockWaitCounter.h  CMakeLists.txt  ConflictLockGuard.cpp  ConflictLockGuard.h  (+33 more)
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yml
benchmarks/: BenchmarkBase.h  Makefile  README.md  SDeburrBench.cpp  SReplaceAllBench.cpp  SReplaceBench.cpp  main.cpp
configs/: bedrock.conf  bedrock.init  bedrock.service  bedrock_prerequisites.service
docker/: Dockerfile  README.md  build_and_extract.sh  docker-compose.yml
docs/: README.md  TEMPLATE.md  blockchain.md  cache.md  cli.md  db.md  index.html  index.md  jobs.md  multizone.md  mysql.md  osx.md  status.md  synchronization.md  test-html.md  test.md  vs_mysql.md
hctreetests/: findParentChldren.py  histogram.py  result2.csv
libs/: S3.cpp  S3.h
libstuff/: AutoScopeOnPrepare.cpp  AutoScopeOnPrepare.h  AutoTimer.cpp  AutoTimer.h  CMakeLists.txt  Makefile  README.md  ResourceMonitorThread.cpp  ResourceMonitorThread.h  SData.cpp  SData.h  SDataClient.cpp  SDataClient.h  SDeburr.cpp  SDeburr.h  SFastBuffer.cpp  SFastBuffer.h  SFluentdLogger.cpp  SFluentdLogger.h  SHTTPSManager.cpp  SHTTPSManager.h  SHTTPSProxySocket.cpp  SHTTPSProxySocket.h  SJSON.cpp  SJSON.h  SLockTimer.h  SLog.cpp  SMultiHostSocketPool.cpp  SMultiHostSocketPool.h  SMultiSocketPool.cpp  SMultiSocketPool.h  SPerformanceTimer.cpp  SPerformanceTimer.h  SQResult.cpp  SQResult.h  SQResultFormatter.cpp  SQResultFormatter.h  SQValue.cpp  SQValue.h  SQliteParameter.cpp  (+37 more)
loadTester/: Makefile  loadTester.cpp  loadTester.h
perftest/: Makefile  bigtest.sh  build.sh  perftest.1.db  perftest.cpp  perftest.sql  runtest.sh
plugins/: BackupManager.cpp  BackupManager.h  Cache.cpp  Cache.h  Cache.md  Compression.cpp  Compression.h  DB.cpp  DB.h  Jobs.cpp  Jobs.h  Jobs.md  MySQL.cpp  MySQL.h  MySQLUtils.cpp  MySQLUtils.h  StatsDMetricPlugin.cpp  StatsDMetricPlugin.h  Status.cpp  Status.h  Test.cpp  Test.h  Zstd.cpp  Zstd.h
sqlitecluster/: Makefile  SQLite.cpp  SQLite.h  SQLiteClusterMessenger.cpp  SQLiteCommand.cpp  (+22 more)
test/: CMakeLists.txt  Makefile  PerfTest.cpp  Utils.cpp  Utils.h  br_sync_db6VMO4q-shm  br_sync_dbacb9q0-shm  br_sync_dbfMY55x-shm  br_sync_dbg5UDKO-shm  br_sync_dbnoAcjr-shm  br_sync_dbomTqHP-shm  br_sync_dbuSbrn4-shm  br_sync_dbx8ZpHd-shm  main.cpp  sqlite_standalone_parallel_test.cpp  test_invariant_SSignal.cpp
test/clustertest/: BedrockClusterTester.cpp  BedrockClusterTester.h  CMakeLists.txt  Makefile  main.cpp
test/clustertest/testplugin/: CMakeLists.txt  ExternPointer.cpp  Makefile  TestPlugin.cpp  TestPlugin.h
test/clustertest/tests/: AbandonedCommandTest.cpp  BadCommandTest.cpp  BlockingQueueRateLimitTest.cpp  BoundParametersTest.cpp  BroadcastTest.cpp  CheckpointTest.cpp  ClusterUpgradeTest.cpp  CompressionTest.cpp  ConflictSpamTest.cpp  ControlCommandTest.cpp  DestructorExceptionTest.cpp  DontForkAtShutdownTest.cpp  DoubleDetachTest.cpp  EscalateTest.cpp  FastStandDownTest.cpp  FinishJobTest.cpp  ForkCheckTest.cpp  ForkedNodeApprovalTest.cpp  FutureExecutionTest.cpp  GracefulFailoverTest.cpp  HTTPSBlockingCommitTest.cpp  HTTPSTest.cpp  JobIDTest.cpp  LeadingTest.cpp  LogrockTest.cpp  MassiveQueryTest.cpp  MasteringTest.cpp  MultipleLeaderSyncTest.cpp  MultipleMasterSyncTest.cpp  PermafollowerTest.cpp  PrePeekPostProcessTest.cpp  PrePeekPostProcessTest.h  ReloadPluginTest.cpp  SetPriorityTest.cpp  SignalExceptionTest.cpp  StatusHandlingCommandsTest.cpp  StatusTest.cpp  ThreadExceptionTest.cpp  TimeoutTest.cpp  TimingTest.cpp  (+23 more)
test/data/: intacct_policy.json  personal.json  thoughtworks-us.json
test/lib/: BedrockTester.cpp  BedrockTester.h  BedrockTester2.cpp  BedrockTester2.h  CMakeLists.txt  Comparator.cpp  Comparator.h  PortMap.cpp  PortMap.h  PrintEquality.h  RemoteSQLite.cpp  RemoteSQLite.h  TestHTTPS.cpp  TestHTTPS.h  TestSQLite.cpp  TestSQLite.h  tpunit++.cpp  tpunit++.hpp
test/sample_data/: journal.dict  lottoNumbers.json  samplePolicy.json
test/scripts/: commit_lock_timeout_test.sh
test/tests/: ChainedHTTPTest.cpp  CommandPortTest.cpp  FastHTTPParsing.cpp  JSONParserTest.cpp  JSONPerformanceTest.cpp  JSONValueTest.cpp  LargeCommandResponseTest.cpp  LibStuffTest.cpp  MySQLTest.cpp  MySQLUtilsTest.cpp  ParallelConnectionTest.cpp  PerfTest.cpp  QueryTest.cpp  ReadTest.cpp  SDeburrBench.cpp  SDeburrTest.cpp  SFluentdLoggerTest.cpp  SHTTPSManagerStreamTest.cpp  SIsValidSQLiteDateModifierTest.cpp  SQLiteConflictParseTest.cpp  SQLiteInitTest.cpp  SQLiteNodeTest.cpp  SQResultFormatterTest.cpp  SQueryTest.cpp  SRingBufferTest.cpp  SSLTest.cpp  STimeTest.cpp  SocketSendDrainTest.cpp  SpellfixTest.cpp  StatusTest.cpp  SuppressCommandPortCrash.cpp  WriteTest.cpp
test/tests/backupManager/: BackupTest.cpp  ClusterBackup.cpp  Makefile  main.cpp
test/tests/backupManager/data/: db.sql  key.key  key.key.enc
test/tests/backupManager/tests/: Backup.cpp
test/tests/jobs/: CancelJobTest.cpp  CrashIdentifyingValuesTest.cpp  CreateJobTest.cpp  CreateJobsTest.cpp  DeleteJobTest.cpp  FailJobTest.cpp  FailedJobReplyTest.cpp  FinishJobTest.cpp  GetJobTest.cpp  GetJobsTest.cpp  InifiniteRetryAfterTest.cpp  JobTestHelper.cpp  JobTestHelper.h  QueryJobTest.cpp  QueryJobsTest.cpp  RequeueJobTest.cpp  RequeueJobsTest.cpp  RetryJobTest.cpp  SequentialJobTest.cpp  StressTest.cpp  UpdateJobTest.cpp  Utils.cpp  Utils.h
(+39 files in other folders)
